[package]
name = "simple-syrup"
version = "0.5.0"
edition = "2021"
description = "the fastest way to a graphql endpoint running in rust"
license = "MIT OR Apache-2.0"
authors = ["Dan <danbruder@hey.com>"]
documentation = "https://docs.rs/simple-syrup"
readme = "README.md"
repository = "https://github.com/danbruder/simple-syrup/"

include = ["/migrations/", "src", "Cargo.toml"]


[dependencies]
anyhow = "1.0.53"
async-graphql = "3.0.28"
async-graphql-warp = "3.0.28"
chrono = "0.4.19"
dotenv = "0.15.0"
serde = "1.0.136"
serde_json = "1.0.78"
sqlx = {version = "0.5.10", features=[ "runtime-tokio-rustls" , "sqlite", "migrate", "macros", "uuid", "chrono", "offline"]}
tokio = {version= "1.16.1", features = ["full"]}
uuid = "0.8.2"
warp = "0.3.2"
